css-tutorial/src/app/Modules/navbar/navbar.component.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

.nav-container{
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: #5d4954;
    font-family: 'Poppins', sans-serif;
}

.logo{
    display: flex;
    align-items: center;
}

.logo-img{
    height: 5%;
    width: 5%;
    padding-right: 8px;
}

.logo a{
    text-decoration: none;
    color: white;
    text-transform: uppercase;
    letter-spacing: 3px;
    font-size: 20px;
}

.nav-links{
    display: flex;
    justify-content: space-around;
    width: 25%;
}

.nav-links li{
    list-style: none;
}

.nav-links a{
    color: white;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 14px;
}

.nav-links a:hover{
    color: gray;
}

.burger{
    display: none;
    cursor: pointer;
}

.burger div{
    width: 25px;
    height: 3px;
    background-color: white;
    margin: 5px;
}

@media screen and (max-width:1024px){
    .nav-links{
        width: 60%;
    }
}

@media screen and (max-width:768px){
    body{
        overflow-x: hidden;
    }

    .nav-links{
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: #5d4954;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 35%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }

    .burger{
        display: block;
    }
}

.nav-active{
    transform: translateX(0%);
}

